orcid-web/src/main/webapp/static/css/orcid.new.css
/* ... */
@media only screen and (-webkit-min-device-pixel-ratio:2),only screen and (min-device-pixel-ratio:2) {
    ul.privacyHelp li {
        background: url(../img/privacy_icons_200.png) no-repeat;
        background-size: 25px 66px
    }
}

ul.privacyHelp li.public {
    background-position: 0 -2px
}

ul.privacyHelp li.limited {
    background-position: 0 -22px
}

ul.privacyHelp li.private {
    background-position: 0 -45px
}

.editTablePadCell35 {
    padding: 0;
    margin: 0 30px
}

#emailTable {
    width: 100%;
    padding: 0
}

.editTablePadCell35 .row {
    margin-top: 10px
}

.editTablePadCell35 .add-email span.btn {
    margin-top: 0
}

.editTablePadCell35 .add-email input {
    width: 70%
}

.editTablePadCell35 .email-verified {
    padding-left: 0
}

.editTablePadCell35 .email,.wrap {
    word-break: break-all
}

.small-box {
    float: left;
    width: 25%
}

.small-box input[type=checkbox] {
    width: 15px
}

#emailTable td {
    padding: 0;
    border: 0;
    height: 40px
}

#emailTable td.padRgt {
    padding-right: 10px
}

#externalIdentifierTable td.padRgt {
    padding-right: 7px
}

#externalIdentifierTable p {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    width: 225px
}

#statistics .page-header {
    font-size: 2em;
    color: #a6ce39;
    border: 0;
    margin-bottom: 10px;
    display: block
}

#statistics span.stat-name {
    font-size: 1.2em;
    font-style: normal;
    color: #494a4c
}

#statistics span.stat-data,#statistics span.stat-name-st {
    font-size: 1em;
    font-style: normal;
    color: #494a4c
}

#statistics span.stat-data {
    font-size: 1.5em;
    font-weight: 700
}

#statistics .col-md-3,#statistics .col-md-6,#statistics .col-sm-8,#statistics .col-xs-12,#statistics .col-xs-8 {
    border-top: 1px solid #eee;
    padding: 15px
}

#statistics .stat-subheader {
    border: 0
}

.dropdown,.dropup {
    position: relative
}

#colorbox:focus,.dropdown-toggle:active,.dropdown-toggle:focus,.open .dropdown-toggle {
    outline: 0
}

.dropdown-menu,.privacy-dropdown-menu {
    -webkit-background-clip: padding-box;
    -moz-background-clip: padding;
    background-clip: padding-box;
    background-color: #fff;
    border: 1px solid rgba(0,0,0,.2);
    border-radius: 6px;
    box-shadow: 0 5px 10px rgba(0,0,0,.2);
    display: none;
    float: left;
    left: 0;
    list-style: none;
    margin: 2px 0 0;
    min-width: 160px;
    padding: 5px 0;
    position: absolute;
    top: 100%;
    z-index: 1000
}

.privacy-dropdown-menu.pull-right {
    right: 0;
    left: auto
}

.privacy-dropdown-menu .divider {
    background-color: #e5e5e5;
    border-bottom: 1px solid #fff;
    height: 1px;
    margin: 9px 1px;
    overflow: hidden
}

.privacy-dropdown-menu .disabled>a,.privacy-dropdown-menu .disabled>a:hover {
    color: #999
}

.privacy-dropdown-menu .disabled>a:hover {
    text-decoration: none;
    cursor: default;
    background-color: transparent
}

.open>.privacy-dropdown-menu {
    display: block
}

.pull-right>.privacy-dropdown-menu {
    right: 0;
    left: auto
}

.dropup .privacy-dropdown-menu,.navbar-fixed-bottom .dropdown .privacy-dropdown-menu {
    top: auto;
    bottom: 100%;
    margin-bottom: 1px
}

.dropdown-submenu>.privacy-dropdown-menu {
    top: 0;
    left: 100%;
    margin-top: -6px;
    margin-left: -1px;
    border-radius: 0 6px 6px 6px
}

.dropdown-submenu:hover>.privacy-dropdown-menu {
    display: block
}

.dropdown .privacy-dropdown-menu .nav-header {
    padding-right: 20px;
    padding-left: 20px
}

.dropdown-menu {
    display: block;
    margin: 0;
    z-index: 5000
}

.dropdown-menu.pull-right {
    right: 0;
    left: auto
}

.dropdown-menu .divider {
    background-color: #e5e5e5;
    border-bottom: 1px solid #fff;
    height: 1px;
    margin: 9px 1px;
    overflow: hidden
}

.dropdown-menu a,.privacy-dropdown-menu a {
    display: block;
    clear: both;
    color: #333;
    font-weight: 400;
    line-height: 20px;
    margin-left: 2px;
    padding: 3px 20px;
    white-space: nowrap
}

.dropdown-menu .uib-typeahead-match a {
    padding-right: 10px;
    text-indent: -10px;
    white-space: initial;
    word-wrap: break-word
}

.dropdown-menu .disabled>a,.dropdown-menu .disabled>a:hover {
    color: #999
}

.dropdown-menu .disabled>a:hover {
    text-decoration: none;
    cursor: default;
    background-color: transparent
}

.open>.dropdown-menu {
    display: block
}

.pull-right>.dropdown-menu {
    right: 0;
    left: auto
}

.dropup .caret,.navbar-fixed-bottom .dropdown .caret {
    border-top: 0;
    border-bottom: 4px solid #000;
    content: ""
}

.privacy-tool .dropup .caret {
    border-bottom: 4px solid #fff
}

.dropup .dropdown-menu,.navbar-fixed-bottom .dropdown .dropdown-menu {
    top: auto;
    bottom: 100%;
    margin-bottom: 1px
}

.dropdown-submenu {
    position: relative
}

.dropdown-submenu>.dropdown-menu {
    border-radius: 0 6px 6px 6px;
    left: 100%;
    margin-left: -1px;
    margin-top: -6px;
    top: 0
}

.cboxPhoto,.dropdown-submenu:hover>.dropdown-menu {
    display: block
}

.dropdown-submenu>a:after {
    display: block;
    float: right;
    width: 0;
    height: 0;
    margin-top: 5px;
    margin-right: -10px;
    border-color: transparent transparent transparent #ccc;
    border-style: solid;
    border-width: 5px 0 5px 5px;
    content: " "
}

.dropdown-submenu:hover>a:after {
    border-left-color: #fff
}

.dropdown .dropdown-menu .nav-header {
    padding-right: 20px;
    padding-left: 20px
}

#colorbox,
.popover-ng2-bck {
    position: fixed
}

#cboxOverlay,#cboxWrapper,#colorbox {
    top: 0;
    left: 0;
    z-index: 9999
}

#cboxWrapper {
    position: absolute
}

#cboxOverlay {
    position: fixed;
    width: 100%;
    height: 100%
}

#cboxBottomLeft,#cboxMiddleLeft {
    clear: left
}

#cboxContent {
    position: relative
}

#cboxLoadedContent {
    /*overflow: scroll!important;*/
    overflow: visible!important;
}

#cboxTitle {
    margin: 0
}
/* ... */

